data/all_generated_tests/raw_wast_tests/nop_UnreachableCodeExecution_229.wast
;; 10. **Test Case 10: Randomized `nop` insertions in valid instruction sequence leading to `unreachable`:**     - **Constraint Checked:** Ensuring random `nop` placements do not disrupt the valid execution path.     - **Expected Behavior:** Despite random `nop` placements, should eventually hit `unreachable` to trap.     - **Differential Behavior:** Wizard_engine’s initialization context mismanagement might lead to unexpected execution behaviors.

(assert_invalid
  (module
    (func $random_nop (unreachable) (nop) (block (nop) (nop) (br 0)))
    "unknown operator")
)